microservices/web-ui/istio/catalog-retry-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
  - catalog
  http:
  - retries:
      attempts: 3
      perTryTimeout: 5.000s
    route:
    - destination:
        host: catalog
        subset: version-v1
      weight: 100
