microservices/web-ui/istio/header-routing-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: inventory
spec:
  host: inventory
  subsets:
  - labels:
      version: 1.0.0
    name: version-v1
  - labels:
      version: 2.0.0
    name: version-v2
